common/keycloak/postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  namespace: #@ data.values.keycloak.namespace
spec:
  selector:
    matchLabels:
      app: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - image: postgres:11
        name: postgres
        ports:
        - containerPort: 5432
          name: keycloak-db
        volumeMounts:
        - name: keycloak-db
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: keycloak-db
        persistentVolumeClaim:
          claimName: keycloak-db
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: #@ data.values.keycloak.namespace
spec:
  ports:
  - port: 5432
  selector:
    app: keycloak-db
